# Stickit

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  check-formatting.yml
src/: CMakeLists.txt  main.cpp  resource.h  resource.rc
tools/: build-installer.ps1  installer.iss
